Completed the main tasks section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,107 @@
                     </div>
                 </div>
                 <hr class="border-dashed my-8 opacity-20">
+
+                <!-- Main Tasks Starts from here -->
+                <div class="grid grid-cols-3 grid-rows-2 gap-9">
+                
+                    <!-- Task Box 1 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">Shop Ease</h4>
+                        <h2 class="font-medium text-2xl my-4">Fix Mobile Button Issue</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Fix unresponsive mobile buttons on all devices to ensure smooth functionality.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Task Box 2 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">CloudSync</h4>
+                        <h2 class="font-medium text-2xl my-4">Add Dark Mode</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Implement dark mode for better visual comfort and battery efficiency.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Task Box 3 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">SwiftPay</h4>
+                        <h2 class="font-medium text-2xl my-4">Optimize Home Page</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Improve home page design for faster load times and better navigation.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Task Box 4 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">Meta</h4>
+                        <h2 class="font-medium text-2xl my-4">Add New emoji 🤲</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Introduce a new emoji to the Meta platform to enrich user communication and expression.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Task Box 5 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">Google LLC</h4>
+                        <h2 class="font-medium text-2xl my-4">Integrate OpenAI API</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Integrate OpenAI API to enable advanced AI-driven features and automation capabilities.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Task Box 6 -->
+                    <div class="bg-[#F4F7FF] p-6 rounded-2xl">
+                        <h4 class="bg-white px-4 py-2 inline-block rounded-lg">Glassdoar</h4>
+                        <h2 class="font-medium text-2xl my-4">Improve Job Searching</h2>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Enhance job search tools for better resume and networking strategies.</p>
+                        <hr class="border-dashed my-4 opacity-20">
+                        <div class="flex justify-between">
+                            <div>
+                                <h5 class="text-sm">Deadline</h5>
+                                <p class="font-medium">21 March 2025</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary font-medium btn-completed">Completed</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
      </main>
 
      <script src="utilities/uitilies.js"></script>
