Completed the activity log section

--- a/index.html
+++ b/index.html
@@ -193,6 +193,24 @@
                             </div>
                         </div>
                     </div>
+                    <!-- This is the Activity Log Section -->
+                    </section>
+                    <section class="bg-white p-6 rounded-2xl">
+                        <div class="flex items-center flex-col">
+                            <div class="flex gap-3 my-4">
+                                <div>
+                                    <img src="assets/activity.png" alt="">
+                                </div>
+                                <div>
+                                    <h3 class="font-medium text-xl">Activity Log</h3>
+                                </div>
+                            </div>
+                            <button id="btn-clear-history" class="btn btn-primary font-medium text-base">Clear History</button>
+                        </div>
+                        <hr class="border-dashed my-6 opacity-20">
+                        <div id="history">
+                        </div>
+                    </section>
                 </div>
      </main>
 
