Completed the nav bar section for blog page

--- a/blog.html
+++ b/blog.html
@@ -27,13 +27,21 @@
     <!-- This is the Header Section -->
     <header>
         <!-- This is the Nav Section -->
-        <nav>
-
+        <nav class="max-w-screen-2xl mx-auto pt-8">
+            <div class="flex justify-between items-center bg-white rounded-2xl p-6">
+                <div class="flex flex-1 items-center">
+                    <img class="mr-3" src="assets/logo.png" alt="">
+                    <h2 class="text-4xl">Dev<span class="font-bold">Board</span></h2>
+                </div>
+                <div>
+                    <button id="btn-back-to-desk" class="btn btn-primary text-xl text-white">Back to Desk</button>
+                </div>
+            </div>
         </nav>
     </header>
 
     <script>
-        
+
     </script>
 </body>
 
