Updated the Back to Desk button functionality for blog page

--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,9 @@
         </div>
     </main>
     <script>
-        
+        document.getElementById('btn-back-to-desk').addEventListener('click', function () {
+                window.location.href = 'index.html'
+        })
     </script>
 </body>
 
