Implemented the functionality of the random color change in the homepage for the challenge part

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body class="bg-[#F4F7FF] text-[#00303C] poppins-regular px-36">
+<body id="body" class="bg-[#F4F7FF] text-[#00303C] poppins-regular px-36">
     <!-- This is the Header Section -->
     <header>
         <!-- This is the Nav Section -->
