Implemented the functionality of the completed task button with alert in the homepage for the challenge part

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="bg-[#F4F7FF] p-6 rounded-2xl">
                         <h4 class="bg-white px-4 py-2 inline-block rounded-lg">CloudSync</h4>
                         <h2 class="font-medium text-2xl my-4">Add Dark Mode</h2>
-                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Implement dark mode for better visual comfort and battery efficiency.</p>
+                        <p class="bg-white p-4 my-4 rounded-lg text-clip opacity-50">Implemente the dark mode for a better visual comfort and battery efficiency.</p>
                         <hr class="border-dashed my-4 opacity-20">
                         <div class="flex justify-between">
                             <div>
